--- a/index.html
+++ b/index.html
@@ -594,9 +594,11 @@
 
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./assets/js/scripts.js"></script>
-<!-- Swiper JS -->
+
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<!-- Initialize Swiper -->
+
 <script>
-  var swiper = new Swiper(".mySwiper", {});
+  var swiper = new Swiper(".mySwiper", {
+    autoplay: 5000,
+  });
 </script>
