--- a/index.html
+++ b/index.html
@@ -599,6 +599,10 @@
 
 <script>
   var swiper = new Swiper(".mySwiper", {
-    autoplay: 5000,
+    loop: true,
+    autoplay: {
+      delay: 5000,
+      disableOnInteraction: false,
+    },
   });
 </script>
