--- a/category.html
+++ b/category.html
@@ -92,7 +92,84 @@
           </li>
           <li class="breadcrumb-item active">Eatable Packs</li>
         </ol>
-        <h1 class="section-title text-center mb-5">Eatable Packs</h1>
+        <h1 class="section-title text-center">Eatable Packs</h1>
+      </div>
+
+      <div class="container">
+        <div
+          class="my-4 filter-section row align-items-center justify-content-between"
+        >
+          <div class="col-auto">
+            <a href="#" class="filter-button">
+              <img
+                class="filter-button-icon"
+                src="https://placehold.co/40x40"
+                alt=""
+              />
+              <span>Filters</span>
+            </a>
+          </div>
+          <div class="col-auto">
+            <div class="row gy-sm align-items-center">
+              <div class="col-auto">
+                <div class="d-flex">
+                  <span>Show :</span>
+                  <ol
+                    class="ms-1 mb-0 filter-breadcrumb breadcrumb align-items-center"
+                  >
+                    <li class="breadcrumb-item">
+                      <a href="#">9</a>
+                    </li>
+                    <li class="breadcrumb-item active">12</li>
+                    <li class="breadcrumb-item">
+                      <a href="#">18</a>
+                    </li>
+                    <li class="breadcrumb-item"><a href="#">24</a></li>
+                  </ol>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="row gx-sm">
+                  <div class="col-auto">
+                    <a href="#" class="filter-button">
+                      <img
+                        class="filter-button-icon"
+                        src="https://placehold.co/40x40"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="col-auto">
+                    <a href="#" class="filter-button">
+                      <img
+                        class="filter-button-icon"
+                        src="https://placehold.co/40x40"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="col-auto">
+                    <a href="#" class="filter-button">
+                      <img
+                        class="filter-button-icon"
+                        src="https://placehold.co/40x40"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-auto">
+                <select class="form-select filter-section-sorting">
+                  <option selected>Default sorting</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <section class="section-catergory-grid">
@@ -338,6 +415,21 @@
                 <div class="product-price">$139.95</div>
               </div>
             </div>
+          </div>
+          <div class="d-flex justify-content-center">
+            <ul class="main-pagination mt-5">
+              <li class="pagination-item active">
+                <a href="#">1</a>
+              </li>
+              <li class="pagination-item">
+                <a href="#">2</a>
+              </li>
+              <li class="pagination-item">
+                <a href="#">
+                  <span class="material-icons-outlined">chevron_right</span>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
