--- a/category.html
+++ b/category.html
@@ -103,7 +103,7 @@
             <a href="#" class="filter-button">
               <img
                 class="filter-button-icon"
-                src="https://placehold.co/40x40"
+                src="./assets/images/producticon.png"
                 alt=""
               />
               <span>Filters</span>
@@ -134,7 +134,7 @@
                     <a href="#" class="filter-button">
                       <img
                         class="filter-button-icon"
-                        src="https://placehold.co/40x40"
+                        src="./assets/images/producticon1.png"
                         alt=""
                       />
                     </a>
@@ -143,7 +143,7 @@
                     <a href="#" class="filter-button">
                       <img
                         class="filter-button-icon"
-                        src="https://placehold.co/40x40"
+                        src="./assets/images/producticon2.png"
                         alt=""
                       />
                     </a>
@@ -152,7 +152,16 @@
                     <a href="#" class="filter-button">
                       <img
                         class="filter-button-icon"
-                        src="https://placehold.co/40x40"
+                        src="./assets/images/producticon3.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="col-auto">
+                    <a href="#" class="filter-button">
+                      <img
+                        class="filter-button-icon"
+                        src="./assets/images/producticon44.png"
                         alt=""
                       />
                     </a>
@@ -199,7 +208,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Rise-n-Shine-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -219,7 +228,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Tuna-Lovers-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -239,7 +248,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Lets-Eat-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -259,7 +268,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Grab-n-Go.png"
                     alt=""
                     class="product-img"
                   />
@@ -279,7 +288,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-The-Real-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -299,7 +308,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Spice-Me-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -319,7 +328,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Happy-Feelings-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -339,7 +348,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Cookie-Me-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -359,7 +368,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Queens-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -379,7 +388,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Kings-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -399,7 +408,87 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Premium-Pack.png"
+                    src="./assets/images/products/FL-Mr-Hygiene.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+              </div>
+              <div class="product-details">
+                <div class="product-name">Premium Pack</div>
+                <div class="product-price">$139.95</div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Cookie-Me-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+              </div>
+              <div class="product-details">
+                <div class="product-name">Premium Pack</div>
+                <div class="product-price">$139.95</div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Queens-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+              </div>
+              <div class="product-details">
+                <div class="product-name">Premium Pack</div>
+                <div class="product-price">$139.95</div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Kings-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+              </div>
+              <div class="product-details">
+                <div class="product-name">Premium Pack</div>
+                <div class="product-price">$139.95</div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Mr-Hygiene.png"
                     alt=""
                     class="product-img"
                   />
