--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@
           </div>
           <ul class="header-navidation">
             <li><a href="./">Home</a></li>
-            <li><a href="./products.html">Products</a></li>
+            <li><a href="./product.html">Products</a></li>
             <li><a href="./faq.html">FAQs</a></li>
             <li class="search-box search-box-rounded">
               <input
@@ -82,6 +82,16 @@
               <div>msladykthopmson@yahoo.com</div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="mobile-menu-overlay"></div>
+      <div class="header-mobile">
+        <div class="mobile-menu-container">
+          <ul class="header-mobile-menu">
+            <li><a href="./">Home</a></li>
+            <li><a href="./product.html">Products</a></li>
+            <li><a href="./">FAQs</a></li>
+          </ul>
         </div>
       </div>
     </header>
