--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
           <ul class="header-navidation">
             <li><a href="./">Home</a></li>
-            <li><a href="./products.html">Products</a></li>
+            <li><a href="./product.html">Products</a></li>
             <li><a href="./faq.html">FAQs</a></li>
             <li class="search-box search-box-rounded">
               <input
