--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
           </div>
         </div>
       </div>
+      <div class="mobile-menu-overlay"></div>
+      <div class="header-mobile">
+        <div class="mobile-menu-container">
+          <ul class="header-mobile-menu">
+            <li><a href="./">Home</a></li>
+            <li><a href="./product.html">Products</a></li>
+            <li><a href="./">FAQs</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
     <div class="content-wrapper">
       <section class="hero-section">
