--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       <div class="mobile-menu-overlay"></div>
       <div class="header-mobile">
         <div class="mobile-menu-container">
+          <div class="menu-searchbar">
+            <input type="search" placeholder="Search..." />
+            <button><span class="material-icons">search</span></button>
+          </div>
           <ul class="header-mobile-menu">
             <li><a href="./">Home</a></li>
             <li><a href="./product.html">Products</a></li>
