--- a/product.html
+++ b/product.html
@@ -330,14 +330,14 @@
             </ul>
           </div>
           <div class="col-12 col-sm-6 pt-lg-4 col-lg-3 order-1">
-            <div class="footer-call">
+            <a href="tel:5555555555" class="footer-call">
               <!-- <a class="mb-md-1 mb-lg-3" href="#"
                 ><img src="./assets/images/earphone.png" alt=""
               /></a>
               <a href="">CUSTOMER SERVICE</a>
               <a href="">(555)555-5555</a> -->
               <img class="img-fluid" src="./assets/images/Frame.png" alt="" />
-            </div>
+            </a>
           </div>
         </div>
       </div>
